ft uploads to git remote

--- a/GADS2020LEADERBOARD/app/src/main/res/layout/activity_submit.xml
+++ b/GADS2020LEADERBOARD/app/src/main/res/layout/activity_submit.xml
@@ -57,8 +57,10 @@
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:background="@color/divider"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -80,7 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            android:backgroundTint="@color/divider"
+            android:background="@drawable/button"
             android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
