--- a/GADS2020LEADERBOARD/app/src/main/res/values/colors.xml
+++ b/GADS2020LEADERBOARD/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="endColor">#FF477b36</color>
     <color name="black_overlay">#66000000</color>
     <color name="divider">#F1A202</color>
+    <color name="divider_center_color">#F1D190</color>
 </resources>
